--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="The interactive portfolio of Denielle James Sombong — a creative developer crafting human-centered, animated experiences on the web."
     />
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <div class="intro-gate" data-intro>
@@ -17,7 +17,7 @@
         <div class="intro-album">
           <div class="intro-album-main">
             <img
-              src="../assets/img/DJS.jpg"
+              src="./assets/img/DJS.jpg"
               alt="Portrait of Denielle James Sombong"
               loading="lazy"
             />
@@ -536,6 +536,9 @@
             <div class="project-modal-orbit-ring project-modal-orbit-ring--one"></div>
             <div class="project-modal-orbit-ring project-modal-orbit-ring--two"></div>
             <div class="project-modal-orbit-ring project-modal-orbit-ring--three"></div>
+            <div class="project-modal-planet project-modal-planet--saturn"></div>
+            <div class="project-modal-planet project-modal-planet--jupiter"></div>
+            <div class="project-modal-planet project-modal-planet--uranus"></div>
           </div>
           <div class="project-modal-content" data-modal-content></div>
         </div>
@@ -552,7 +555,7 @@
       </div>
     </section>
 
-    <script src="../assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
 
